ckpt4 comment fixes
Removed mockito.verify, changed to a testing method that is more direct.

changed UserComputeAPI and DataComputeAPI.